<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardiac_report_view"
    tools:context=".DataViewerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
...
                android:text="Cardiac Report View"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/redirect_to_add_data"
                android:layout_width="122dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
...
